--- a/cards.html
+++ b/cards.html
@@ -29,7 +29,7 @@
      
       <div class="row px-2 mt-4 gap-3" id="filterable-cards">
         <div class="card p-0" data-name="Payment-Gateway">
-          <img src="images/amazon-pay.jpeg" alt="amazon-pay">
+          <img src="amazon-pay.jpeg" alt="amazon-pay">
           
           <div class="card-body">
             <h4 class="card-title">Amazon pay</h4>
@@ -37,7 +37,7 @@
           </div>
         </div>
         <div class="card p-0" data-name="Brands">
-          <img src="images/bata.png" alt="Bata">
+          <img src="bata.png" alt="Bata">
           <div class="card-body">
             <h4 class="card-title">Bata</h4>
             <h6><button>Reedem Now</button></h6>
