--- a/cards.html
+++ b/cards.html
@@ -44,126 +44,126 @@
           </div>
         </div>
         <div class="card p-0" data-name="Online-shoping">
-          <img src="images/big-basket.png" alt="img">
+          <img src="big-basket.png" alt="img">
           <div class="card-body">
             <h4 class="card-title">Big-Basket</h4>
             <h6><button>Reedem Now</button></h6>
           </div>
         </div>
         <div class="card p-0" data-name="Travel">
-          <img src="images/cleartrip.png" alt="img">
+          <img src="cleartrip.png" alt="img">
           <div class="card-body">
             <h4 class="card-title">Cleartrip</h4>
             <h6><button>Reedem Now</button></h6>
           </div>
         </div>
         <div class="card p-0" data-name="Online-shoping">
-          <img src="images/flipkart.jpeg" alt="img">
+          <img src="flipkart.jpeg" alt="img">
           <div class="card-body">
             <h4 class="card-title">Flipkart</h4>
             <h6><button>Reedem Now</button></h6>
           </div>
         </div>
         <div class="card p-0" data-name="Payment-Gateway">
-          <img src="images/hp-pay.png" alt="img">
+          <img src="hp-pay.png" alt="img">
           <div class="card-body">
             <h4 class="card-title">HP-Pay</h4>
             <h6><button>Reedem Now</button></h6>
           </div>
         </div>
         <div class="card p-0" data-name="Brands">
-            <img src="images/levis.png" alt="img">
+            <img src="levis.png" alt="img">
             <div class="card-body">
               <h4 class="card-title">Levis</h4>
               <h6><button>Reedem Now</button></h6>
             </div>
           </div>
           <div class="card p-0" data-name="Online-shoping">
-            <img src="images/myntra.png" alt="img">
+            <img src="myntra.png" alt="img">
             <div class="card-body">
               <h4 class="card-title">Myntra</h4>
               <h6><button>Reedem Now</button></h6>
             </div>
           </div>
           <div class="card p-0" data-name="Travel">
-            <img src="images/ola.png" alt="img">
+            <img src="ola.png" alt="img">
             <div class="card-body">
               <h4 class="card-title">Ola</h4>
               <h6><button>Reedem Now</button></h6>
             </div>
           </div>
           <div class="card p-0" data-name="Brands">
-            <img src="images/prestige.png" alt="img">
+            <img src="prestige.png" alt="img">
             <div class="card-body">
               <h4 class="card-title">Prestige</h4>
               <h6><button>Reedem Now</button></h6>
             </div>
           </div>
           <div class="card p-0" data-name="Brands">
-            <img src="images/levis.png" alt="img">
+            <img src="levis.png" alt="img">
             <div class="card-body">
               <h4 class="card-title">Levis</h4>
               <h6><button>Reedem Now</button></h6>
             </div>
           </div>
           <div class="card p-0" data-name="Online-shoping">
-            <img src="images/body-shop.jpg" alt="img">
+            <img src="body-shop.jpg" alt="img">
             <div class="card-body">
               <h4 class="card-title">Body-Shop</h4>
               <h6><button>Reedem Now</button></h6>
             </div>
           </div>
           <div class="card p-0" data-name="Food">
-            <img src="images/dominos.png" alt="img">
+            <img src="dominos.png" alt="img">
             <div class="card-body">
               <h4 class="card-title">Domino's Pizza</h4>
               <h6><button>Reedem Now</button></h6>
             </div>
           </div>
           <div class="card p-0" data-name="Brands">
-            <img src="images/jockey.png" alt="img">
+            <img src="jockey.png" alt="img">
             <div class="card-body">
               <h4 class="card-title">jockey</h4>
               <h6><button>Reedem Now</button></h6>
             </div>
           </div>
           <div class="card p-0" data-name="Online-shoping">
-            <img src="images/life-style-online.jpg" alt="img">
+            <img src="life-style-online.jpg" alt="img">
             <div class="card-body">
               <h4 class="card-title">Lifestyle Online</h4>
               <h6><button>Reedem Now</button></h6>
             </div>
           </div>
           <div class="card p-0" data-name="Online-shoping">
-            <img src="images/smartbazaar.png" alt="img">
+            <img src="smartbazaar.png" alt="img">
             <div class="card-body">
               <h4 class="card-title">Smart Bazaar</h4>
               <h6><button>Reedem Now</button></h6>
             </div>
           </div>
           <div class="card p-0" data-name="Food">
-            <img src="images/starsbucks.png" alt="img">
+            <img src="starsbucks.png" alt="img">
             <div class="card-body">
               <h4 class="card-title">Starbucks</h4>
               <h6><button>Reedem Now</button></h6>
             </div>
           </div>
           <div class="card p-0" data-name="Entertainment">
-            <img src="images/zee5.png" alt="img">
+            <img src="zee5.png" alt="img">
             <div class="card-body">
               <h4 class="card-title">Zee5</h4>
               <h6><button>Reedem Now</button></h6>
             </div>
           </div>
           <div class="card p-0" data-name="Brands">
-            <img src="images/pantaloons.png" alt="img">
+            <img src="pantaloons.png" alt="img">
             <div class="card-body">
               <h4 class="card-title">Pantaloons</h4>
               <h6><button>Reedem Now</button></h6>
             </div>
       </div>
       <div class="card p-0" data-name="Travel">
-        <img src="images/Airindia.png" alt="img">
+        <img src="Airindia.png" alt="img">
         <div class="card-body">
           <h4 class="card-title">Air India</h4>
           <h6><button>Reedem Now</button></h6>
